--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "flask>=3.1.0",
+    "google-auth>=2.38.0",
+    "gspread>=6.1.4",
+    "requests>=2.32.3",
+]
