--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==3.1.0
 google-auth==2.38.0
 google-auth-oauthlib==1.2.1
 gspread==6.1.4
+gunicorn==21.2.0
 idna==3.10
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
